--- a/my-app/package.json
+++ b/my-app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-app",
+  "name": "user-card",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://AntoninaKobzar.github.io/user-card/",
